# prompt_distil

./: .env.example  .gitignore  LICENSE  README.md  acceptance_runner.sh  pyproject.toml
.artifact/: agent_changes.tgz  agent_status.txt  agent_worktree.diff  untracked.txt
.artifact/acceptance/: asr_ru.md  cli_help.txt  file_ru.md  hybrid_en.json  hybrid_fr.json  no_key.txt  pip_list.txt  ru.txt  rules_en.md  rules_ru.json
.artifact/acceptance/tmp_project/.prompt_distil/: project_cache.json
.prompt_distil/: project_cache.json
.prompt_distil/lexicon/: en.json
docs/: incremental-indexing.md
examples/: new_en.aiff  new_ru.aiff  sample.aiff
examples/transcripts/: ru_mixed.txt
prompt_distil/: __init__.py  main.py
prompt_distil/core/: __init__.py  config.py  debug_log.py  distill.py  lexicon.py  llm_handler.py  llm_map.py  progress.py  prompt.py  reconcile.py  speech.py  surface.py  timing.py  types.py
prompt_distil/data/lexicons/: es.json  ru.json
tests/: __init__.py  test_basic.py  test_content_hashing.py  test_env_and_indexing.py  test_incremental_indexing.py
